objects/CustomerSatisfactionSurvey__c.object
<CustomObject>
    <description>Dec 2012 Rel: Custom Object for capturing CSat Survery information</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>CustomerSatisfactionSurveys</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CSLDSurveyRef__c</fullName>
        <description>To store the external ID of a survey from CSLD process organization. Contents of field will be survey identified coming from the CSLD process organization.</description>
        <externalId>true</externalId>
        <label>CSLD Survey Ref</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactFirstName__c</fullName>
        <label>Contact First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactLastName__c</fullName>
        <label>Contact Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactName__c</fullName>
        <formula>ContactFirstName__c &amp; &apos; &apos;&amp; ContactLastName__c</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>CustomerSatisfactionSurveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateOfSurvey__c</fullName>
        <label>Date Of Survey</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GoldenCustomerSatisfactionSurveyId__c</fullName>
        <externalId>true</externalId>
        <label>GoldenCustomerSatisfactionSurveyId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecommendationComments__c</fullName>
        <label>Recommendation Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RecommendationScore__c</fullName>
        <label>Recommendation</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RepurchaseScore__c</fullName>
        <label>Repurchase</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SEAccountID__c</fullName>
        <label>SE Account ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SEContactID__c</fullName>
        <label>SE Contact ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SatisfactionComments__c</fullName>
        <label>Satisfaction Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SatisfactionScore__c</fullName>
        <label>Satisfaction</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TECH_SDH_CountryCode__c</fullName>
        <formula>Country__r.CountryCode__c</formula>
        <label>TECH_SDH_CountryCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeofExperienceSurvey__c</fullName>
        <label>Survey Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ST01</fullName>
                </value>
                <value>
                    <fullName>ST02</fullName>
                </value>
                <value>
                    <fullName>ST03</fullName>
                </value>
                <value>
                    <fullName>ST04</fullName>
                </value>
                <value>
                    <fullName>ST05</fullName>
                </value>
                <value>
                    <fullName>ST06</fullName>
                </value>
                <value>
                    <fullName>ST07</fullName>
                </value>
                <value>
                    <fullName>ST08</fullName>
                </value>
                <value>
                    <fullName>ST09</fullName>
                </value>
                <value>
                    <fullName>ST10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bFOContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>bFO Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Experience Feedback</relationshipLabel>
        <relationshipName>CustomerSatisfactionSurveys</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Customer Experience Feedback</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>bFO Survey ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Experience Feedback</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>